# enfc

./: .gitignore  Cargo.toml  LICENSE  README.md  example.enf  flake.nix
examples/: array.enf  bitwise.enf  brainfuck.enf  example.enf  fibonacci.enf  heap.enf  helloworld.enf  inject.enf  loop.enf  mandelbrot.enf  pointers.enf  server.enf
examples/server/: client.enf  server.enf
src/: compile_error.rs  config.rs  diagnostic.rs  driver.rs  formatter.rs  lib.rs  main.rs  program.rs  structs.rs
src/driver/: codegen.rs  irgen.rs  lex.rs  lexer.rs  parse.rs  parser.rs  semantic_analyzer.rs  std.enf  typecheck.rs
src/driver/codegen/: ccodegen.rs
src/formatter/: fmt_default.rs  fmt_miette.rs
src/program/: m_arg_handler.rs  m_fs.rs  m_program_error.rs
src/structs/: common.rs
